2002-03-11  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-warn, c-warn): CURRENT-FUNCTION does not
	necessarily return a function
	(form-name): new function - a short printed form representation
	(compile-file): use it for *COMPILE-PRINT* and form name that is
	passed to COMPILE-TOPLEVEL-FORM instead of '#:TOP-LEVEL-FORM

2002-03-10  Peter Burwood  <clisp@peterb.org.uk>

	* pathname.d (realpath) [UNIX_CYGWIN32]: neither dir nor symlink
	generate ENOTDIR

2002-03-10  Sam Steingold  <sds@gnu.org>

	The default foreign language is now ANSI C, not K&R C
	* foreign1.lisp (DEF-C-CALL-OUT, DEF-C-CALL-IN): deprecated
	(*foreign-language*): new variable
	(default-foreign-language): new exported macro (set it)
	(parse-c-function): use it
	* compiler.lisp (with-compilation-unit): bind it
	* init.lisp (load): ditto
	* bindings/linuxlibc5/linux.lisp, bindings/linuxlibc6/linux.lisp
	* postgresql632/postgresql.lisp, postgresql642/postgresql.lisp
	* regexp/regexp.lisp, wildcard/wildcard.lisp: use DEF-CALL-OUT
	instead of DEF-C-CALL-OUT and call DEFAULT-FOREIGN-LANGUAGE

2002-03-10  Sam Steingold  <sds@gnu.org>

	IPv6 portability suggested by Bruno
	* socket.d (s6_addr16): define if not defined yet
	(S6_ADDR16): accessor helper
	(ipv6_ntop): use it - a unified definition now

2002-03-09  Sam Steingold  <sds@gnu.org>

	more error unification
	* init.lisp (check-symbol): new function
	(defun): use it
	* foreign1.lisp (check-symbol): removed
	(DEF-C-TYPE, DEF-C-VAR, DEF-CALL-OUT, DEF-LIB-CALL-OUT)
	(DEF-CALL-IN, def-c-enum): use the new check-symbol
	* defstruct.lisp (defstruct): ditto
	(ds-symbol-or-error): removed

2002-03-09  Sam Steingold  <sds@gnu.org>

	autoconf tweaks for hp/ux and cygwin
	* autoconf/aclocal.m4 (CL_CANONICAL_HOST_CPU_FOR_FFCALL)
	(CL_CANONICAL_HOST_CPU): hppa2.0* --> hppa
	* configure.in (HAVE_GETHOSTENT): check for gethostent(3)
	* unixconf.h.in (HAVE_GETHOSTENT): added an #undef
	* socket.d (RESOLVE-HOST-IPADDR-INTERNAL): check HAVE_GETHOSTENT